--- a/cadastro.html
+++ b/cadastro.html
@@ -17,14 +17,11 @@
         <label for="nome"><b>Nome completo:</b> </label>
         <input type="text" id="nome"/><br><br>
 
-        <label for="login"><b>Email:</b> </label>
-        <input type="text" id="login"/><br><br>
+        <label for="cpf"><b>Cpf:</b> </label>
+        <input type="number" id="tel"/><br><br>
 
         <label for="tel"><b>Telefone:</b> </label>
         <input type="number" id="tel"/><br><br>
-
-        <label for="end"><b>Endereço:</b> </label>
-        <input type="text" id="end"/><br><br>
 
         <label for="senha"><b>Senha: </b></label>
         <input type="password" id="senha"/><br><br>
@@ -37,7 +34,6 @@
         <!--verificar se todos os campos foram preenchidos-->
 
     </div>
-    
     
 </body>
 
