--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title> Login </title>
     <link rel="icon" href="../imagens/login.png" type="image/png">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="styleLogin.css" type="text/css">
     <script src="script.js"></script>
 
 </head>
@@ -14,8 +14,8 @@
     
     <div class="caixa">
         <h1 style="text-align:center; color: black"> Entre ou cadastre-se </h1>
-        <label for="login"><b>Email:</b> </label>
-        <input type="text" id="login"/><br><br>
+        <label for="login"><b>CPF:</b> </label>
+        <input type="number" id="login"/><br><br>
         <label for="senha"><b>Senha: </b></label>
         <input type="password" id="senha"/><br><br>
         <button onclick ="conferirSenha()">Entrar</button>
