criei a pagina de reserva

--- a/home.html
+++ b/home.html
@@ -132,6 +132,7 @@
         </a>
     </div>
 
+    <div class="container-fluid my-3 mx-3"></div>
 
     <div class="container-fluid">
         <div class="container my-3">
@@ -143,7 +144,7 @@
                             <small>Faça sua</small>
                             <h2>Reserva</h2>
                             <p>Realizando a Reserva Online você garante seu lugar com segurança.</p>
-                            <a href="reserva.html" class="reserva__button" id="reservationButton">Faça sua reserva</a>
+                            <a href="reserva.html" class="reserva_button" id="reservationButton">Faça sua reserva</a>
                         </div>
                     </div>
                 </div>
@@ -154,7 +155,7 @@
                             <small>Conheça nossos</small>
                             <h2>Chefs</h2>
                             <p>Conheça nossos renomados chefs.</p>
-                            <a href="chefs.html" class="chefs__button" id="EquipeButton">Nossos chefs</a>
+                            <a href="chefs.html" class="chefs_button" id="EquipeButton">Nossos chefs</a>
                         </div>
                     </div>
                 </div>
