--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styleHome.css" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
@@ -131,34 +131,22 @@
             <span class="sr-only">Próximo</span>
         </a>
     </div>
+    <div class="container-fluid my-3">
+        <div class="row justify-content-center"> <!-- Usando a grid do Bootstrap -->
+            <!-- Div de reserva -->
+            <div class="col-md-5 me-5 md-5 mb-3 reserva_box"> <!-- Adiciona margem à direita e embaixo -->
+                <small>Faça sua</small>
+                <h2>Reserva</h2>
+                <p>Realizando a Reserva Online você garante seu lugar com segurança.</p>
+                <a href="reserva.html" class="btn btn-warning" id="reserva_button">Faça sua reserva</a>
+            </div>
 
-    <div class="container-fluid my-3 mx-3"></div>
-
-    <div class="container-fluid">
-        <div class="container my-3">
-            <div class="row"> <!-- Usando a grid do Bootstrap -->
-                <!-- Div de reserva -->
-                <div class="col-md-6">
-                    <div class="reserva_box">
-                        <div class="reserva__content">
-                            <small>Faça sua</small>
-                            <h2>Reserva</h2>
-                            <p>Realizando a Reserva Online você garante seu lugar com segurança.</p>
-                            <a href="reserva.html" class="reserva_button" id="reservationButton">Faça sua reserva</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Div de equipe -->
-                <div class="col-md-6">
-                    <div class="equipe_box">
-                        <div class="equipe__content">
-                            <small>Conheça nossos</small>
-                            <h2>Chefs</h2>
-                            <p>Conheça nossos renomados chefs.</p>
-                            <a href="chefs.html" class="chefs_button" id="EquipeButton">Nossos chefs</a>
-                        </div>
-                    </div>
-                </div>
+            <!-- Div de equipe -->
+            <div class="col-md-5 ms-5 md-5 mb-3 equipe_box"> <!-- Adiciona margem à esquerda e embaixo -->
+                <small>Conheça nossos</small>
+                <h2>Chefs</h2>
+                <p>Conheça nossos renomados chefs.</p>
+                <a href="chefs.html" class="btn btn-warning" id="chefs_button">Nossos chefs</a>
             </div>
         </div>
     </div>
