--- a/home.html
+++ b/home.html
@@ -125,14 +125,14 @@
             </div>
         </div>
     
-        <!-- Controles "Anterior" e "Próximo" -->
+        <!-- Controles "Anterior" e "Próximo" do carrossel -->
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Anterior</span>
+            <span class="sr-only">Anterior </span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Próximo</span>
+            <span class="sr-only">Próximo </span>
         </a>
     </div>
     
