alterei alguns textos

--- a/reserva.html
+++ b/reserva.html
@@ -26,7 +26,7 @@
         <label for="tel"><b>Quantidade de pessoas:</b> </label>
         <input type="number" id="tel"/><br><br>
 
-        <label for="tel"><b>Data:</b> </label>
+        <label for="tel"><b>Data e horário:</b> </label>
         <input type="datetime-local" id="tel"/><br><br>
 
         <button onclick ="cadastrarCliente()">Concluir cadastro</button> 
