alterei o texto da pag reserva

--- a/reserva.html
+++ b/reserva.html
@@ -13,7 +13,7 @@
 <body>
     
     <div class="caixa">
-        <h1 style="text-align:center; color: black">Seu cadastro </h1>
+        <h1 style="text-align:center; color: black">Cadastro de reserva </h1>
         <label for="nome"><b>Nome completo:</b> </label>
         <input type="text" id="nome"/><br><br>
 
@@ -29,7 +29,7 @@
         <label for="tel"><b>Data e horário:</b> </label>
         <input type="datetime-local" id="tel"/><br><br>
 
-        <button onclick ="cadastrarCliente()">Concluir cadastro</button> 
+        <button onclick ="cadastrarCliente()">Concluir reserva</button> 
         <!--aqui precisamos verificar se as senhas sao iguais antes de concluir o cadastro-->
         <!--verificar se todos os campos foram preenchidos-->
 
