--- a/cadastro.html
+++ b/cadastro.html
@@ -18,10 +18,10 @@
         <input type="text" id="nome"/><br><br>
 
         <label for="cpf"><b>Cpf:</b> </label>
-        <input type="number" id="tel"/><br><br>
+        <input type="text" id="tel"/><br><br>
 
         <label for="tel"><b>Telefone:</b> </label>
-        <input type="number" id="tel"/><br><br>
+        <input type="text" id="tel"/><br><br>
 
         <label for="senha"><b>Senha: </b></label>
         <input type="password" id="senha"/><br><br>
