pequenas alteraçoes login e reserva

--- a/reserva.html
+++ b/reserva.html
@@ -29,9 +29,7 @@
         <label for="tel"><b>Data e horário:</b> </label>
         <input type="datetime-local" id="tel"/><br><br>
 
-        <button onclick ="cadastrarCliente()">Concluir reserva</button> 
-        <!--aqui precisamos verificar se as senhas sao iguais antes de concluir o cadastro-->
-        <!--verificar se todos os campos foram preenchidos-->
+        <button onclick ="cadastrarReserva()">Concluir reserva</button> 
 
     </div>
     
