--- a/cadastro.html
+++ b/cadastro.html
@@ -6,7 +6,7 @@
     <title> Cadastro </title>
     <link rel="icon" href="../imagens/user.png" type="image/png">
     <link rel="stylesheet" href="styleCadastro.css" type="text/css">
-    <script src="script.js"></script>
+    <script src="cadastroCli.js"></script>
 
 </head>
 
@@ -18,7 +18,7 @@
         <input type="text" id="nome"/><br><br>
 
         <label for="cpf"><b>Cpf:</b> </label>
-        <input type="text" id="tel"/><br><br>
+        <input type="text" id="cpf"/><br><br>
 
         <label for="tel"><b>Telefone:</b> </label>
         <input type="text" id="tel"/><br><br>
@@ -30,9 +30,6 @@
         <input type="password" id="senha2"/><br><br>
 
         <button onclick ="cadastrarCliente()">Concluir cadastro</button> 
-        <!--aqui precisamos verificar se as senhas sao iguais antes de concluir o cadastro-->
-        <!--verificar se todos os campos foram preenchidos-->
-
     </div>
     
     
