--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title> Login </title>
     <link rel="icon" href="../imagens/login.png" type="image/png">
     <link rel="stylesheet" href="styleLogin.css" type="text/css">
-    <script src="script.js"></script>
+    <script src="login.js"></script>
 
 </head>
 
@@ -15,10 +15,10 @@
     <div class="caixa">
         <h1 style="text-align:center; color: black"> Entre ou cadastre-se </h1>
         <label for="login"><b>CPF:</b> </label>
-        <input type="number" id="login"/><br><br>
+        <input type="text" id="text"/><br><br>
         <label for="senha"><b>Senha: </b></label>
         <input type="password" id="senha"/><br><br>
-        <button onclick ="conferirSenha()">Entrar</button> 
+        <button onclick ="logar()">Entrar</button> 
         <button onclick ="cadastrarCliente()">Fazer cadastro</button>
     </div>
     
