--- a/login.html
+++ b/login.html
@@ -15,14 +15,21 @@
     <div class="caixa">
         <h1 style="text-align:center; color: black"> Entre ou cadastre-se </h1>
         <label for="login"><b>CPF:</b> </label>
-        <input type="text" id="text"/><br><br>
+        <input type="text" id="login"/><br><br>
         <label for="senha"><b>Senha: </b></label>
         <input type="password" id="senha"/><br><br>
-        <button onclick ="logar()">Entrar</button> 
-        <button onclick ="cadastrarCliente()">Fazer cadastro</button>
+        <button onclick="logar()">Entrar</button> 
+        <button onclick="redirecionarCadastro()">Fazer cadastro</button>
+
+        <!-- Div para exibir as mensagens de erro ou sucesso -->
+        <div id="mensagem" style="margin-top: 10px; color: red;"></div>
     </div>
     
-    
+    <script> 
+        function redirecionarCadastro(){
+            window.location.href = "cadastro.html";
+        }
+    </script>
 </body>
 
 </html>
