--- a/reserva.html
+++ b/reserva.html
@@ -7,21 +7,14 @@
     <link rel="icon" href="../imagens/user.png" type="image/png">
     <link rel="stylesheet" href="styleReserva.css" type="text/css">
     <script src="cadastroResv.js"></script>
-
 </head>
 
 <body>
-    
     <div class="caixa">
         <h1 style="text-align:center; color: black">Cadastro de reserva </h1>
-        <label for="nome"><b>Nome completo:</b> </label>
-        <input type="text" id="nome"/><br><br>
 
-        <label for="cpf"><b>Cpf:</b> </label>
-        <input type="text" id="cpf"/><br><br>
-
-        <label for="tel"><b>Telefone:</b> </label>
-        <input type="text" id="tel"/><br><br>
+        <label for="mesa"><b>Mesa:</b> </label>
+        <input type="number" id="mesa"/><br><br>
 
         <label for="qtdP"><b>Quantidade de pessoas:</b> </label>
         <input type="number" id="qtdP"/><br><br>
@@ -29,9 +22,8 @@
         <label for="dt"><b>Data e horário:</b> </label>
         <input type="datetime-local" id="dt"/><br><br>
 
-        <button onclick ="cadastrarReserva()">Concluir reserva</button> 
+        <button onclick="cadastrarReserva()">Concluir reserva</button> 
     </div>
-    
 </body>
 
 </html>
