alterações de cadastro e login

--- a/cadastro.html
+++ b/cadastro.html
@@ -23,6 +23,9 @@
         <label for="tel"><b>Telefone:</b> </label>
         <input type="text" id="tel"/><br><br>
 
+        <label for="foto"><b>Foto:</b></label>
+        <input type="file" id="fotoCliente" accept="image/*"/><br><br>
+
         <label for="senha"><b>Senha: </b></label>
         <input type="password" id="senha"/><br><br>
 
