--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
                     <i class="fas fa-search"></i> <!-- Ícone de lupa -->
                 </button>
             </form>
-            <a class="navbar-brand" href="login.html">
+            <a class="navbar-brand" href="escolhaLogin.html">
                 <img src="../imagens/userLogin.png" width="30" height="30" alt="Login Icon">
             </a>
         </div>
