--- a/loginFuncionario.html
+++ b/loginFuncionario.html
@@ -27,7 +27,7 @@
     
     <script> 
         function redirecionarCadastro(){
-            window.location.href = "cadastro.html";
+            window.location.href = "cadastroFuncionario.html";
         }
     </script>
 </body>
