--- a/home.html
+++ b/home.html
@@ -10,6 +10,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+        <script>
+            function redirecionarPerfil() {
+                const clienteCpf = localStorage.getItem("clienteCpf");
+                const funcionarioCpf = localStorage.getItem("funcionarioCpf");
+    
+                if (clienteCpf) {
+                    window.location.href = "dadosCli.html"; // Página de dados do cliente
+                } else if (funcionarioCpf) {
+                    window.location.href = "dadosFun.html"; // Página de dados do funcionário
+                } else {
+                    window.location.href = "escolhaLogin.html"; // Página de escolha de login
+                }
+            }
+        </script>
 </head>
 
 <body>
@@ -54,7 +68,7 @@
                     <i class="fas fa-search"></i> <!-- Ícone de lupa -->
                 </button>
             </form>
-            <a class="navbar-brand" href="escolhaLogin.html">
+            <a class="navbar-brand" href="#" onclick="redirecionarPerfil()">
                 <img src="../imagens/userLogin.png" width="30" height="30" alt="Login Icon">
             </a>
         </div>
