alterações cadastro e login

--- a/escolhaLogin.html
+++ b/escolhaLogin.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Escolha o tipo de login</h1>
-        <button onclick="window.location.href='login.html'">Cliente</button>
+        <button onclick="window.location.href='loginCliente.html'">Cliente</button>
         <button onclick="window.location.href='loginFuncionario.html'">Funcionário</button>
     </div>
 </body>
