--- a/loginCliente.html
+++ b/loginCliente.html
@@ -6,7 +6,7 @@
     <title> Login </title>
     <link rel="icon" href="../imagens/login.png" type="image/png">
     <link rel="stylesheet" href="styleLogin.css" type="text/css">
-    <script src="login.js"></script>
+    <script src="loginCli.js"></script>
 
 </head>
 
@@ -27,7 +27,7 @@
     
     <script> 
         function redirecionarCadastro(){
-            window.location.href = "cadastro.html";
+            window.location.href = "cadastroCliente.html";
         }
     </script>
 </body>
