--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="#">Nossa equipe</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pratos</a>
+                    <a class="nav-link" href="pratos.html">Pratos</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown"
