página para cadastro de prato

--- a/cadastroCliente.html
+++ b/cadastroCliente.html
@@ -6,7 +6,7 @@
     <title> Cadastro </title>
     <link rel="icon" href="../imagens/user.png" type="image/png">
     <link rel="stylesheet" href="styleCadastro.css" type="text/css">
-    <script src="cadastroCli.js"></script>
+    <script src="cadastroCliente.js"></script>
 
 </head>
 
