--- a/loginCliente.html
+++ b/loginCliente.html
@@ -6,7 +6,7 @@
     <title> Login </title>
     <link rel="icon" href="../imagens/login.png" type="image/png">
     <link rel="stylesheet" href="styleLogin.css" type="text/css">
-    <script src="loginCli.js"></script>
+    <script src="loginCliente.js"></script>
 
 </head>
 
