--- a/loginFuncionario.html
+++ b/loginFuncionario.html
@@ -6,7 +6,7 @@
     <title> Login funcionário </title>
     <link rel="icon" href="../imagens/login.png" type="image/png">
     <link rel="stylesheet" href="styleLogin.css" type="text/css">
-    <script src="loginFunc.js"></script>
+    <script src="loginFuncionario.js"></script>
 
 </head>
 
