--- a/reserva.html
+++ b/reserva.html
@@ -6,7 +6,7 @@
     <title> Reserva </title>
     <link rel="icon" href="../imagens/user.png" type="image/png">
     <link rel="stylesheet" href="styleReserva.css" type="text/css">
-    <script src="cadastroResv.js"></script>
+    <script src="cadastroReserva.js"></script>
 </head>
 
 <body>
