alteração da pagina de dados cliente ao entrar com o login cli

--- a/cadastroCliente.html
+++ b/cadastroCliente.html
@@ -6,7 +6,7 @@
     <title> Cadastro </title>
     <link rel="icon" href="../imagens/user.png" type="image/png">
     <link rel="stylesheet" href="styleCadastro.css" type="text/css">
-    <script src="cadastroCli.js"></script>
+    <script src="cadastroCli.js" defer></script>
 
 </head>
 
@@ -32,9 +32,8 @@
         <label for="senha2"><b>Confirme sua senha:</b> </label>
         <input type="password" id="senha2"/><br><br>
 
-        <button onclick ="cadastrarCliente()">Concluir cadastro</button> 
+        <button id="cadastrarBtn">Concluir cadastro</button> 
     </div>
-    
     
 </body>
 
