--- a/dadosCli.html
+++ b/dadosCli.html
@@ -28,6 +28,8 @@
 
                 <button type="button" onclick="atualizarDados()">Salvar Alterações</button>
                 <button type="button" onclick="apagarInformacoes()">Apagar conta</button>
+                <button type="button" onclick="excluirReserva()">Excluir Reserva</button>
+
 
             </form>
         </div>
