--- a/cadastroFuncionario.html
+++ b/cadastroFuncionario.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Funcionário</title>
     <link rel="stylesheet" href="stylecadastro.css">
-    <script src="cadastroFunc.js"></script>
+    <script src="cadastroFuncionario.js"></script>
 </head>
 <body>
     <div class="caixa">
@@ -14,13 +14,13 @@
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required><br><br>
             
-            <label for="cpf">CPF:</label>
-            <input type="text" id="cpf" name="cpf" required><br><br>
+            <label for="nrocarteira">Número de carteira:</label>
+            <input type="number" id="nrocarteira" name="nrocarteira" required><br><br>
             
             <label for="cargo">Cargo:</label>
             <input type="text" id="cargo" name="cargo" required><br><br>
 
-            <label for="curriculo"><b>Currículo:</b></label>
+            <label for="curriculo">Currículo:</label>
             <input type="file" id="curriculoFuncionario" name="curriculo" accept=".pdf,.doc,.docx"/><br><br>
 
             <label for="senha"><b>Senha: </b></label>
