só arrumei o texto dos campos

--- a/cadastroFuncionario.html
+++ b/cadastroFuncionario.html
@@ -11,16 +11,16 @@
     <div class="caixa">
     <h1 style="text-align:center; color: black">Cadastro de Funcionário</h1>        
         <form action="/cadastrar_funcionario" method="POST">
-            <label for="nome">Nome:</label>
+            <label for="nome"><b>Nome completo:</b></label>
             <input type="text" id="nome" name="nome" required><br><br>
             
-            <label for="nrocarteira">Número de carteira:</label>
+            <label for="nrocarteira"><b>Número de carteira:</b></label>
             <input type="number" id="nrocarteira" name="nrocarteira" required><br><br>
             
-            <label for="cargo">Cargo:</label>
+            <label for="cargo"><b>Cargo:</b></label>
             <input type="text" id="cargo" name="cargo" required><br><br>
 
-            <label for="curriculo">Currículo:</label>
+            <label for="curriculo"><b>Currículo:</b></label>
             <input type="file" id="curriculoFuncionario" name="curriculo" accept=".pdf,.doc,.docx"/><br><br>
 
             <label for="senha"><b>Senha: </b></label>
