modifiquei a pagina home para ter as duas opcoes

--- a/dadosFun.html
+++ b/dadosFun.html
@@ -17,6 +17,8 @@
        
         <!--Botão pra mostrar o currículo, não vai atualizar nada-->
         <button type="button" onclick="mostrarCurriculo()">Mostrar Currículo</button>
+        <!-- Botão Voltar -->
+        <button type="button" onclick="voltarHome()">Voltar</button>
 
     </div>
     
