--- a/dadosCli.html
+++ b/dadosCli.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleDadosCli.css" type="text/css">
-    <title>Dados Cliente</title> 
+    <title>Dados Cliente</title>
 </head>
+
 <body>
     <div class="caixa">
         <h1 style="text-align:center; color: black"> Dados do cliente </h1>
@@ -18,11 +20,15 @@
         <!-- Botão para exibir o formulário de atualização -->
         <button type="button" onclick="mostrarFormularioAtualizacao()">Atualizar Dados</button>
 
+        <!-- Botão Voltar -->
+        <button type="button" onclick="voltarParaHome()">Voltar</button>
+
+
         <!-- Formulário de atualização de dados, inicialmente oculto -->
         <div id="atualizarForm" style="display: none;">
             <h2>Atualizar Dados:</h2>
             <form>
-                
+
                 <label for="novoTelefone">Telefone:</label>
                 <input type="text" id="novoTelefone" name="novoTelefone"><br><br>
 
@@ -36,5 +42,12 @@
     </div>
 
     <script src="dadosCli.js"></script>
+
+    <script>
+        function voltarParaHome() {
+            window.location.href = "home.html"; // Redireciona para a página home.html
+        }
+    </script>
 </body>
+
 </html>
