nova atualização em dados do clinete

--- a/dadosCli.html
+++ b/dadosCli.html
@@ -21,7 +21,7 @@
         <button type="button" onclick="mostrarFormularioAtualizacao()">Atualizar Dados</button>
 
         <!-- Botão Voltar -->
-        <button type="button" onclick="voltarParaHome()">Voltar</button>
+        <button type="button" onclick="window.location.href='home.html'">Voltar</button>
 
 
         <!-- Formulário de atualização de dados, inicialmente oculto -->
