rota login corrigida

--- a/loginFuncionario.html
+++ b/loginFuncionario.html
@@ -15,7 +15,7 @@
     <div class="caixa">
         <h1 style="text-align:center; color: black"> Entre ou cadastre-se </h1>
         <label for="login"><b>Número de carteira:</b> </label>
-        <input type="text" id="login"/><br><br>
+        <input type="number" id="login"/><br><br>
         <label for="senha"><b>Senha: </b></label>
         <input type="password" id="senha"/><br><br>
         <button onclick="logar()">Entrar</button> 
