--- a/loginFuncionario.html
+++ b/loginFuncionario.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
-    <title> Login funcionário </title>
+    <title>Login Funcionário</title>
     <link rel="icon" href="../imagens/login.png" type="image/png">
     <link rel="stylesheet" href="styleLogin.css" type="text/css">
-    <script src="loginFuncionario.js"></script>
-
+    <script src="loginFuncionario.js" defer></script>
 </head>
-
 <body>
-    
     <div class="caixa">
-        <h1 style="text-align:center; color: black"> Entre ou cadastre-se </h1>
-        <label for="login"><b>Número de carteira:</b> </label>
-        <input type="number" id="login"/><br><br>
-        <label for="senha"><b>Senha: </b></label>
-        <input type="password" id="senha"/><br><br>
-        <button onclick="logar()">Entrar</button> 
+        <h1 style="text-align:center; color: black">Entre ou cadastre-se</h1>
+        <label for="login"><b>Número de carteira:</b></label>
+        <input type="number" id="login" required/><br><br>
+        <label for="senha"><b>Senha:</b></label>
+        <input type="password" id="senha" required/><br><br>
+        <button onclick="logar()">Entrar</button>
         <button onclick="redirecionarCadastro()">Fazer cadastro</button>
-
         <!-- Div para exibir as mensagens de erro ou sucesso -->
         <div id="mensagem" style="margin-top: 10px; color: red;"></div>
     </div>
-    
     <script> 
-        function redirecionarCadastro(){
+        function redirecionarCadastro() {
             window.location.href = "cadastroFuncionario.html";
         }
     </script>
 </body>
-
 </html>
