mudança em cadastro prato

--- a/cadastroPrato.html
+++ b/cadastroPrato.html
@@ -6,7 +6,7 @@
     <title> Cadastro de Prato </title>
     <link rel="icon" href="../imagens/user.png" type="image/png">
     <link rel="stylesheet" href="styleAtualizaPrato.css" type="text/css">
-    <script src="cadastroPrato.js"></script> 
+    <script src="pratos.js"></script> 
 
 </head>
 
