--- a/pratos.html
+++ b/pratos.html
@@ -22,7 +22,7 @@
         // Função para buscar e exibir pratos
         async function carregarPratos() {
             try {
-                const response = await fetch('http://localhost:8080/pratos'); // Rota para listar pratos
+                const response = await fetch('/api/pratos'); // Altere para a rota correta
                 const pratos = await response.json();
                 const pratosContainer = document.getElementById('pratos-container');
 
@@ -49,86 +49,6 @@
                 });
             } catch (error) {
                 console.error('Erro ao carregar os pratos:', error);
-            }
-        }
-
-        // Função para cadastrar um prato
-        async function cadastrarPrato() {
-            const dadosPrato = {
-                nome: prompt("Nome do Prato:"),
-                preco: parseFloat(prompt("Preço do Prato:")) || 0,
-                descricao: prompt("Descrição do Prato:"),
-                avaliacaoMed: parseFloat(prompt("Avaliação Média (de 0 a 10):")) || 0, // Preenchido mas não exibido
-                modoPreparo: prompt("Modo de Preparo:") // Preenchido mas não exibido
-            };
-
-            try {
-                const response = await fetch('/admin/prato', { // Rota para cadastrar
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(dadosPrato)
-                });
-
-                if (response.ok) {
-                    alert('Prato cadastrado com sucesso!');
-                    carregarPratos(); // Atualiza a lista de pratos
-                } else {
-                    const result = await response.json();
-                    alert(result.message || 'Erro ao cadastrar o prato.');
-                }
-            } catch (error) {
-                console.error('Erro ao cadastrar o prato:', error);
-            }
-        }
-
-        // Função para atualizar um prato
-        async function atualizarPrato() {
-            const id = prompt("Informe o código do prato a ser atualizado:");
-            const dadosPrato = {
-                nome: prompt("Novo Nome do Prato:"),
-                preco: parseFloat(prompt("Novo Preço do Prato:")) || 0,
-                descricao: prompt("Nova Descrição do Prato:"),
-                avaliacaoMed: parseFloat(prompt("Nova Avaliação Média (de 0 a 10):")) || 0, // Preenchido mas não exibido
-                modoPreparo: prompt("Novo Modo de Preparo:") // Preenchido mas não exibido
-            };
-
-            try {
-                const response = await fetch(`/admin/prato/${id}`, { // Rota para atualizar
-                    method: 'PUT',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(dadosPrato)
-                });
-
-                if (response.ok) {
-                    alert('Prato atualizado com sucesso!');
-                    carregarPratos(); // Atualiza a lista de pratos
-                } else {
-                    alert('Erro ao atualizar o prato.');
-                }
-            } catch (error) {
-                console.error('Erro ao atualizar o prato:', error);
-            }
-        }
-
-        // Função para remover um prato
-        async function removerPrato(id) {
-            if (confirm(`Você realmente deseja remover o prato de código ${id}?`)) {
-                try {
-                    const response = await fetch(`/admin/prato/${id}`, { // Rota para remover
-                        method: 'DELETE',
-                        headers: { 'Content-Type': 'application/json' }
-                    });
-
-                    if (response.ok) {
-                        alert('Prato removido com sucesso!');
-                        carregarPratos(); // Atualiza a lista de pratos
-                    } else {
-                        const result = await response.json();
-                        alert(result.message || 'Erro ao remover o prato.');
-                    }
-                } catch (error) {
-                    console.error('Erro ao remover o prato:', error);
-                }
             }
         }
 
