--- a/pratos.html
+++ b/pratos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pratos</title>
     <link rel="stylesheet" href="stylePratos.css">
-    <script src="pratos.js" defer></script>
+    <script src="pratos.js" defer></script> 
 </head>
 <body>
     <header class="header">
@@ -16,44 +16,13 @@
         </div>
     </header>
 
-    <div id="pratos-container"></div>
+    <div id="listaPratos"></div> 
 
     <script>
-        // Função para buscar e exibir pratos
-        async function carregarPratos() {
-            try {
-                const response = await fetch('/api/pratos'); // Altere para a rota correta
-                const pratos = await response.json();
-                const pratosContainer = document.getElementById('pratos-container');
-
-                // Limpa o contêiner antes de adicionar os pratos
-                pratosContainer.innerHTML = '';
-
-                // Cria os cards para cada prato retornado
-                pratos.forEach(prato => {
-                    const card = document.createElement('div');
-                    card.className = 'card';
-
-                    card.innerHTML = `
-                        <h3>${prato.nome}</h3>
-                        <p>${prato.descricao}</p>
-                        <div class="botoes">
-                            <button title="Excluir prato" onclick="removerPrato(${prato.id})">-</button>
-                        </div>
-                        <div class="card-footer">
-                            <div class="codigo">Código = ${prato.id}</div>
-                        </div>
-                    `;
-
-                    pratosContainer.appendChild(card);
-                });
-            } catch (error) {
-                console.error('Erro ao carregar os pratos:', error);
-            }
-        }
-
-        // Chama a função para carregar pratos ao iniciar a página
-        document.addEventListener('DOMContentLoaded', carregarPratos);
+        // chama a função para carregar pratos ao iniciar a página
+        document.addEventListener('DOMContentLoaded', () => {
+            carregarPratos();
+        });
     </script>
 </body>
 </html>
