--- a/cadastroCliente.html
+++ b/cadastroCliente.html
@@ -6,35 +6,32 @@
     <title> Cadastro </title>
     <link rel="icon" href="../imagens/user.png" type="image/png">
     <link rel="stylesheet" href="styleCadastro.css" type="text/css">
-    <script src="cadastroCliente.js"></script>
-
+    <script src="cadastroCliente.js" defer></script> <!-- Adiciona defer para carregar o script depois do HTML -->
 </head>
 
 <body>
-    
     <div class="caixa">
         <h1 style="text-align:center; color: black">Seu cadastro </h1>
         <label for="nome"><b>Nome completo:</b> </label>
-        <input type="text" id="nome"/><br><br>
+        <input type="text" id="nomeCliente"/><br><br>
 
-        <label for="cpf"><b>Cpf:</b> </label>
-        <input type="text" id="cpf"/><br><br>
+        <label for="cpf"><b>CPF:</b> </label>
+        <input type="text" id="cpfCliente"/><br><br>
 
         <label for="tel"><b>Telefone:</b> </label>
-        <input type="text" id="tel"/><br><br>
+        <input type="text" id="telCliente"/><br><br>
 
         <label for="foto"><b>Foto:</b></label>
         <input type="file" id="fotoCliente" accept="image/*"/><br><br>
 
         <label for="senha"><b>Senha: </b></label>
-        <input type="password" id="senha"/><br><br>
+        <input type="password" id="senhaCliente"/><br><br>
 
         <label for="senha2"><b>Confirme sua senha:</b> </label>
-        <input type="password" id="senha2"/><br><br>
+        <input type="password" id="senhaCliente2"/><br><br>
 
-        <button id="cadastrarBtn">Concluir cadastro</button> 
+        <button onclick="cadastrarCliente()">Concluir cadastro</button>
     </div>
-    
 </body>
 
 </html>
