--- a/home.html
+++ b/home.html
@@ -16,13 +16,11 @@
         const funcionarioNroCarteira = localStorage.getItem("nrocarteira");
 
         function redirecionarPerfil() {
-            // Exibir ou ocultar os botões de opções de perfil
             const perfilOptions = document.getElementById("perfilOptions");
             perfilOptions.style.display = perfilOptions.style.display === "none" ? "block" : "none";
         }
 
         function verificarLogin(tipo) {
-            // Verificar se o usuário está logado para redirecionar para a página correta
             if (tipo === "dados") {
                 if (clienteCpf) {
                     window.location.href = "dadosCli.html";
@@ -34,6 +32,15 @@
             } else if (tipo === "entrar") {
                 window.location.href = "escolhaLogin.html";
             }
+        }
+
+        function logout() {
+            // Limpar os dados de login
+            localStorage.removeItem("clienteCpf");
+            localStorage.removeItem("nrocarteira");
+            alert("Você saiu com sucesso!");
+            // Redirecionar para a página de login
+            window.location.href = "escolhaLogin.html";
         }
     </script>
 </head>
@@ -77,7 +84,7 @@
             <form class="d-flex ms-auto">
                 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
                 <button class="btn btn-outline-success" type="submit">
-                    <i class="fas fa-search"></i> <!-- Ícone de lupa -->
+                    <i class="fas fa-search"></i>
                 </button>
             </form>
             <a class="navbar-brand" href="#" onclick="redirecionarPerfil()">
@@ -86,14 +93,13 @@
         </div>
     </nav>
 
-    <!-- Div oculta para opções de perfil -->
     <div id="perfilOptions" class="opcoes-perfil" style="display: none;">
         <button class="botao-perfil" onclick="verificarLogin('entrar')">Entrar</button>
         <button class="botao-perfil" onclick="verificarLogin('dados')">Dados</button>
+        <button class="botao-perfil" onclick="logout()">Sair</button> <!-- Botão de Logout -->
     </div>
 
     <script>
-        // Ocultar as opções de perfil ao clicar fora delas
         document.addEventListener("click", function (event) {
             const perfilOptions = document.getElementById("perfilOptions");
             if (event.target.closest(".navbar-brand") === null && event.target.closest("#perfilOptions") === null) {
@@ -119,10 +125,10 @@
             <!-- Ratatouille -->
             <div class="carousel-item active">
                 <div class="d-flex justify-content-center">
-                    <img class="d-block" src="../imagens/ratatouille.png" alt="Ratattouile" style="width: 700px;">
+                    <img class="d-block" src="../imagens/ratatouille.png" alt="Ratatattouile" style="width: 700px;">
                 </div>
                 <div class="carousel-caption">
-                    <p>Ratattouile</p>
+                    <p>Ratatattouile</p>
                 </div>
             </div>
 
@@ -167,73 +173,37 @@
             </div>
         </div>
 
-        <!-- Controles "Anterior" e "Próximo" do carrossel -->
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Anterior </span>
+            <span class="sr-only">Anterior</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Próximo </span>
+            <span class="sr-only">Próximo</span>
         </a>
     </div>
 
-
-
     <div class="container-fluid my-3">
-        <div class="row justify-content-center"> <!-- Usando a grid do Bootstrap -->
-            <!-- Div de reserva -->
-            <div class="col-md-5 me-5 md-5 mb-3 reserva_box"> <!-- Adiciona margem à direita e embaixo -->
-                <h1>Reservas</h1>
-                <a href="reserva.html" class="reserva_button" id="reservationButton">Faça sua reserva</a>
+        <div class="row justify-content-center">
+            <div class="col-10 col-md-6">
+                <p class="pratos"><b>Outros pratos</b></p>
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="../imagens/filadelfia.png" class="img-fluid rounded-start" alt="Filadélfia">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Filadélfia</h5>
+                                <p class="card-text">Uma deliciosa combinação de salmão e cream cheese.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <!-- Div de equipe -->
-            <div class="col-md-5 ms-5 md-5 mb-3 equipe_box"> <!-- Adiciona margem à esquerda e embaixo -->
-                <h1>Chefs</h1>
-                <a href="chefs.html" class="chefs_button" id="EquipeButton">Conheça nossos chefs</a>
-            </div>
+            <!-- Adicione mais pratos aqui -->
         </div>
     </div>
-
-    <footer class="text-light w-100 mt-auto py-4">
-        <div class="container">
-            <div class="row">
-                <!-- Coluna de Contatos -->
-                <div class="col-md-6">
-                    <h2>Contatos</h2>
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a href="https://wa.me/3491564999" class="text-light">
-                                <i class="fab fa-whatsapp fa-lg"></i> 99860-7000
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="text-light">
-                                <i class="fab fa-instagram fa-lg"></i> Gasteau's
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <!-- Coluna de Endereços Atendidos -->
-                <div class="col-md-6">
-                    <h2>Localização</h2>
-                    <h7>Torre Eiffel,<br>
-                        Champ de Mars,<br>
-                        5 Avenue Anatole France,<br>
-                        75007 Paris,<br>
-                        França
-                    </h7>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
 
 </body>
 
