Dados Funcionario OK

--- a/dadosFun.html
+++ b/dadosFun.html
@@ -14,8 +14,9 @@
         <p id="nome"></p>
         <p id="nrocarteira"></p>
         <p id="cargo"></p>
+        <p id="salario"></p>
        
-        <!--Botão pra mostrar o currículo, não vai atualizar nada-->
+        <!--Botão pra mostrar o currículo-->
         <button type="button" onclick="mostrarCurriculo()">Mostrar Currículo</button>
         <!-- Botão Voltar -->
         <button type="button" onclick="voltarHome()">Voltar</button>
