--- a/home.html
+++ b/home.html
@@ -197,7 +197,7 @@
             <!-- Div de reserva -->
             <div class="col-md-5 me-5 md-5 mb-3 reserva_box"> <!-- Adiciona margem à direita e embaixo -->
                 <h1>Reservas</h1>
-                <a href="reserva.html" class="reserva_button" id="reservationButton">Faça sua reserva</a>
+                <a href="cadastroReserva.html" class="reserva_button" id="reservationButton">Faça sua reserva</a>
             </div>
 
             <!-- Div de equipe -->
