Cadastro Prato OK

--- a/pratos.html
+++ b/pratos.html
@@ -6,12 +6,13 @@
     <title>Pratos</title>
     <link rel="stylesheet" href="stylePratos.css">
     <script src="pratos.js" defer></script> 
+    <script src="cadastroPrato.js" defer></script>
 </head>
 <body>
     <header class="header">
         <h1 class="titulo">Pratos</h1>
         <div class="botoes-container"> 
-            <button class="add-prato" onclick="cadastrarPrato()">Adicionar Prato</button>
+            <button class="add-prato" onclick="window.location.href='cadastroPrato.html'">Adicionar Prato</button>
             <button class="atz-prato" onclick="atualizarPrato()">Atualizar Prato</button>
         </div>
     </header>
