--- a/cadastroPrato.html
+++ b/cadastroPrato.html
@@ -17,16 +17,16 @@
         <h1 style="text-align:center; color: black">Cadastro de Prato</h1>
 
         <label for="nomePrato">Nome do Prato: </label>
-        <input type="text" id="nomePrato" required/><br><br>
+        <input type="text" id="nomePrato"/><br><br>
 
         <label for="preco">Preço:</label>
-        <input type="number" step="0.01" id="preco" name="preco" /><br><br>
+        <input type="number" step="0.01" id="preco"/><br><br>
 
         <label for="descricao">Descrição:</label>
-        <textarea id="descricao" name="descricao"></textarea><br><br>
+        <input type="text" id="descricao"><br><br>
 
         <label for="modoPreparo">Modo de Preparo:</label>
-        <textarea id="modoPreparo" name="modoPreparo"></textarea><br><br>
+        <input type="text" id="modoPreparo"><br><br>
 
         
 
