Atualizacao Prato OK

--- a/pratos.html
+++ b/pratos.html
@@ -13,7 +13,7 @@
         <h1 class="titulo">Pratos</h1>
         <div class="botoes-container"> 
             <button class="add-prato" onclick="window.location.href='cadastroPrato.html'">Adicionar Prato</button>
-            <button class="atz-prato" onclick="atualizarPrato()">Atualizar Prato</button>
+            <button class="atz-prato" onclick="window.location.href='atualizaPratos.html'">Atualizar Prato</button>
         </div>
     </header>
 
