--- a/home.html
+++ b/home.html
@@ -65,14 +65,12 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                        Categorias
+                        Relatórios
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Entradas</a></li>
-                        <li><a class="dropdown-item" href="#">Pratos principais</a></li>
-                        <li><a class="dropdown-item" href="#">Sobremesas</a></li>
-                        <li><a class="dropdown-item" href="#">Cartela de vinhos</a></li>
-                        <li><a class="dropdown-item" href="#">Bebidas</a></li>
+                        <li><a class="dropdown-item" href="avaliacao.html">Avaliações dos pratos</a></li>
+                        <li><a class="dropdown-item" href="faturamento.html">Faturamento</a></li>
+                        
                     </ul>
                 </li>
             </ul>
