Ultimos detalhes pratos e cadastros

--- a/dadosCli.html
+++ b/dadosCli.html
@@ -16,6 +16,8 @@
         <p id="cpf"></p>
         <p id="telefone"></p>
         <img id="foto" src="" alt="Foto do cliente" style="width:150px; height:auto;">
+        <p id="classificacao"></p>
+
 
         <!-- Botão para exibir o formulário de atualização -->
         <button type="button" onclick="mostrarFormularioAtualizacao()">Atualizar Dados</button>
